<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/scooter_card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="10dp"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        app:cardUseCompatPadding="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/scooter_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:layout_gravity="center|left"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="2dp"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/missing_name"/>

            <TextView
                android:id="@+id/scooter_where"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:layout_gravity="center_vertical|bottom"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:text="@string/missing_location"/>

            <TextView
                android:id="@+id/scooter_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:layout_gravity="center_vertical|bottom"
                android:textColor="@android:color/black"
                android:textSize="11sp"
                android:textStyle="italic"
                android:text="@string/missing_color"/>

            <ImageView
                android:id="@+id/scooter_imageview"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/ic_baseline_electric_scooter_24"
                android:contentDescription="@string/content_description_image" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/reserve_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reserve_button"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</FrameLayout>
